Website style updated with yes/no pages

--- a/yes.html
+++ b/yes.html
@@ -7,12 +7,15 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Yippie!!! </h1>
+                <h1 class = "header_text">Yippie!! </h1>
             </div>
+            <br>
+            <br>
             <div class="gif_container">
-                <img src="./style/images/cute-cat.gif" alt="Cute animated illustration">
+                <img src="./style/images/peek-yes-3.gif" alt="Cute animated illustration">
             </div>
-            <p class = "text"> See you soon for a suprise!</p>
+            <br>
+            <p class = "text"> Get ready for a suprise! I'll text you the details :)</p>
         </div>
        
     </body> 
