--- a/index.html
+++ b/index.html
@@ -7,24 +7,36 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Do you wanna go out with me ehe</h1>
+                <h1 class = "header_text">Would you like to go on a date with me hehe :)</h1>
             </div>
             <div class="gif_container">
-                <img src="https://media.giphy.com/media/LnKonfpQ44fNvuGLkA/giphy.gif" alt="Cute animated illustration">
+
+                <img src="./style/images/peek-4.gif" alt="Cute animated illustration">
+                <img src="./style/images/peek-yes-1.gif" alt="Cute animated illustration">
             </div>
+            <br>
+            <br>
             <div class = "buttons">
                 <button class="btn" id = "yesButton" onclick="nextPage()">Yes</button>
-                <button class="btn" id="noButton" onmouseover="moveButton()">No</button>
+                <button class="btn" id="noButton" onmouseover="moveButton()" onclick="nextNo()">No</button>
                 <script>
                     function nextPage() {
                         window.location.href = "yes.html";
                     }
+
+                    function nextNo() {
+                        window.location.href="no.html"
+                    }
                     
                     function moveButton() {
-                        var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth);
-                        var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight);
-                        document.getElementById('noButton').style.left = `${x}px`;
-                        document.getElementById('noButton').style.top = `${y}px`;
+                        var random = Math.floor(Math.random() * 10) + 1;
+
+                        if(random != 5){
+                            var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth - 10);
+                            var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight - 10);
+                            document.getElementById('noButton').style.left = `${x}px`;
+                            document.getElementById('noButton').style.top = `${y}px`;
+                        }
                     }
                 </script> 
             </div>
