--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Would you like to go on a date with me hehe :)</h1>
+                <h1 class = "header_text">Would you like to go on a date with me this Saturday hehe :)</h1>
             </div>
             <div class="gif_container">
 
