--- a/no.html
+++ b/no.html
@@ -15,7 +15,7 @@
                 <img src="./style/images/peek-no-5.gif" alt="Cute animated illustration">
             </div>
             <br>
-            <p class = "text">Maybe another time though! </p>
+            <p class = "text">Text back to me with "plop" to lmk, but maybe another time though! </p>
         </div>
        
     </body> 
