--- a/yes.html
+++ b/yes.html
@@ -15,7 +15,7 @@
                 <img src="./style/images/peek-yes-3.gif" alt="Cute animated illustration">
             </div>
             <br>
-            <p class = "text"> Get ready for a suprise! I'll text you the details :)</p>
+            <p class = "text"> Text me back "snazzy" to me (why not lol) and I'll text you the details :)</p>
         </div>
        
     </body> 
