--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="./style/css/styles.css">
-        
+        <style>
+            .buttons {
+                text-align: center;
+            }
+    
+            .btn {
+                /* Add other button styles as needed */
+                margin: 0 auto;
+            }
+        </style>
     </head> 
     <body>
         <div class="container">
