--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class = "header_text">Hi!</h1>
             </div>
             <div class = "buttons">
-                <button class="btn" id = "yesButton" onclick="nextPage()">CLICK ME!!!</button>
+                <button class="btn" onclick="nextPage()">CLICK ME!!!</button>
                 <script>
                     function nextPage() {
                         window.location.href = "decision.html";
